# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  requirements-dev.txt  requirements.txt  scanoss.json  setup.cfg  version.py
.github/workflows/: ci.yml  release.yml  tag-version.yml  test.yml  update-main-version.yml
src/hooks/: __init__.py  check_open_source_software.py  check_undeclared_software.py  utils.py
tools/: get_next_version.sh
