[metadata]
name = scanoss_pre_commit_hooks
version = 0.0.1
description = Scanoss pre commit hooks collection
long_description = file: README.md
long_description_content_type = text/markdown
author = SCANOSS
author_email = info@scanoss.com
license = MIT
url = https://github.com/scanoss/pre-commit-hooks

[options]
packages = find_namespace:
package_dir =
    = src
include_package_data = True
python_requires = >=3.7
install_requires =
    scanoss

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    check-open-source-software = hooks.check_open_source_software:main
