[metadata]
name = scanoss_pre_commit_hooks
version = 0.1.0
description = SCANOSS pre-commit hooks collection
long_description = file: README.md
long_description_content_type = text/markdown
author = SCANOSS
author_email = info@scanoss.com
license = MIT
license_files = LICENSE
url = https://scanoss.com
project_urls =
    Source = https://github.com/scanoss/pre-commit-hooks
    Tracker = https://github.com/scanoss/pre-commit-hooks/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3

[options]
packages = find_namespace:
package_dir =
    = src
include_package_data = True
python_requires = >=3.9
install_requires =
    scanoss>=1.20.5
    rich>=13.9.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    scanoss-check-undeclared-code = hooks.check_undeclared_software:main
